unpackaged/main/default/objects/Lead/fields/ad_id__c.field-meta.xml
<CustomField>
    <fullName>ad_id__c</fullName>
    <label>ad_id</label>
    <length>120</length>
    <type>Text</type>
</CustomField>