unpackaged/main/default/objects/Lead/fields/Additional_Message__c.field-meta.xml
<CustomField>
    <fullName>Additional_Message__c</fullName>
    <label>Additional Message</label>
    <type>TextArea</type>
</CustomField>