unpackaged/main/default/objects/Lead/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <length>150</length>
    <type>Text</type>
</CustomField>