unpackaged/main/default/objects/Lead/fields/adgroup_id__c.field-meta.xml
<CustomField>
    <fullName>adgroup_id__c</fullName>
    <label>adgroup_id</label>
    <length>120</length>
    <type>Text</type>
</CustomField>