unpackaged/main/default/objects/Lead/fields/Appointment_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date_and_Time__c</fullName>
    <label>Appointment Date and Time</label>
    <type>DateTime</type>
</CustomField>