unpackaged/main/default/objects/Lead/fields/April_kWh__c.field-meta.xml
<CustomField>
    <fullName>April_kWh__c</fullName>
    <label>April kWh</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>