unpackaged/main/default/objects/Lead/fields/August_kWh__c.field-meta.xml
<CustomField>
    <fullName>August_kWh__c</fullName>
    <label>August kWh</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>