unpackaged/main/default/objects/Lead/fields/Becoming_Ambassador_Reason__c.field-meta.xml
<CustomField>
    <fullName>Becoming_Ambassador_Reason__c</fullName>
    <label>Becoming Ambassador Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Becoming_Ambassador_Reason</valueSetName>
    </valueSet>
</CustomField>