unpackaged/main/default/objects/Lead/fields/Biz_Dev_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Biz_Dev_Customer_Type__c</fullName>
    <label>Biz Dev Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer - Major Account</fullName>
            </value>
            <value>
                <fullName>Investor - Esoteric (i.e. EB5, etc.)</fullName>
            </value>
            <value>
                <fullName>Investor - HNWI</fullName>
            </value>
            <value>
                <fullName>Investor - Institutional</fullName>
            </value>
            <value>
                <fullName>Investor - MFO</fullName>
            </value>
            <value>
                <fullName>Investor - PE</fullName>
            </value>
            <value>
                <fullName>Investor - Private Credit Financing</fullName>
            </value>
            <value>
                <fullName>Investor - SFO</fullName>
            </value>
            <value>
                <fullName>Investor - VC</fullName>
            </value>
            <value>
                <fullName>Lender - IB</fullName>
            </value>
            <value>
                <fullName>Lender - Mid-Market/Other</fullName>
            </value>
            <value>
                <fullName>Lender - Regional Bank</fullName>
            </value>
            <value>
                <fullName>Palmetto - Sales</fullName>
            </value>
            <value>
                <fullName>Partner - Advisor</fullName>
            </value>
            <value>
                <fullName>Partner - Alchemist</fullName>
            </value>
            <value>
                <fullName>Partner - Ambassador</fullName>
            </value>
            <value>
                <fullName>Partner - Build</fullName>
            </value>
            <value>
                <fullName>Partner - Channel</fullName>
            </value>
            <value>
                <fullName>Partner - Community Lead</fullName>
            </value>
            <value>
                <fullName>Partner - Deal Source</fullName>
            </value>
            <value>
                <fullName>Partner - Distribution</fullName>
            </value>
            <value>
                <fullName>Partner - Finance</fullName>
            </value>
            <value>
                <fullName>Service - Accountant</fullName>
            </value>
            <value>
                <fullName>Service - Broker</fullName>
            </value>
            <value>
                <fullName>Service - Lawyer</fullName>
            </value>
            <value>
                <fullName>Service - Private wealth advisor</fullName>
            </value>
            <value>
                <fullName>Service - Tech Product Add</fullName>
            </value>
            <value>
                <fullName>Rep</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Financial Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>