unpackaged/main/default/objects/Lead/fields/Build_Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Build_Partner_Type__c</fullName>
    <label>Build Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Build Partner - General</fullName>
            </value>
            <value>
                <fullName>Build Partner - Installer</fullName>
            </value>
            <value>
                <fullName>Build Partner - Kickstarter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>