unpackaged/main/default/objects/Lead/fields/Builder_Neighborhood__c.field-meta.xml
<CustomField>
    <fullName>Builder_Neighborhood__c</fullName>
    <label>Builder Neighborhood</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Builder__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Crescent Neighborhood</fullName>
            </value>
            <value>
                <fullName>Mungo Neighborhood</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>