unpackaged/main/default/objects/Lead/fields/Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ID__c</fullName>
    <label>Campaign_ID</label>
    <length>120</length>
    <type>Text</type>
</CustomField>