unpackaged/main/default/objects/Lead/fields/Consultation_Type__c.field-meta.xml
<CustomField>
    <fullName>Consultation_Type__c</fullName>
    <label>Consultation Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Home</fullName>
                <default>true</default>
                <label>In Home</label>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>