unpackaged/main/default/objects/Lead/fields/Coordinates_Lead__c.field-meta.xml
<CustomField>
    <fullName>Coordinates_Lead__c</fullName>
    <label>Coordinates-Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>