unpackaged/main/default/objects/Lead/fields/Customer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Customer_Notes__c</fullName>
    <description>This field is only used to hold a COPY of the standard description field so that when we convert leads, we can put the description on the Opportunity as well as the Contact.  Can be hidden from users.</description>
    <label>Customer Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>