unpackaged/main/default/objects/Lead/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Residential - Customer</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
                <label>Residential - Customer</label>
            </value>
            <value>
                <fullName>Alchemist</fullName>
            </value>
            <value>
                <fullName>Build Partner</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Designer</fullName>
            </value>
            <value>
                <fullName>Engineer</fullName>
            </value>
            <value>
                <fullName>Surveyor</fullName>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>