unpackaged/main/default/objects/Lead/fields/December_kWh__c.field-meta.xml
<CustomField>
    <fullName>December_kWh__c</fullName>
    <label>December kWh</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>