unpackaged/main/default/objects/Lead/fields/device__c.field-meta.xml
<CustomField>
    <fullName>device__c</fullName>
    <label>device</label>
    <length>120</length>
    <type>Text</type>
</CustomField>