unpackaged/main/default/objects/Lead/fields/device_model__c.field-meta.xml
<CustomField>
    <fullName>device_model__c</fullName>
    <label>device_model</label>
    <length>120</length>
    <type>Text</type>
</CustomField>