unpackaged/main/default/objects/Lead/fields/Docs_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Docs_Signed_Date__c</fullName>
    <label>Docs Signed Date</label>
    <type>Date</type>
</CustomField>