unpackaged/main/default/objects/Lead/fields/Explicit_Mobile_Consent_Date__c.field-meta.xml
<CustomField>
    <fullName>Explicit_Mobile_Consent_Date__c</fullName>
    <label>Explicit Mobile Consent Date</label>
    <type>Date</type>
</CustomField>