unpackaged/main/default/objects/Lead/fields/Explicit_Mobile_Opt_in__c.field-meta.xml
<CustomField>
    <fullName>Explicit_Mobile_Opt_in__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Explicit Mobile Opt-in</label>
    <type>Checkbox</type>
</CustomField>