unpackaged/main/default/objects/Lead/fields/February_kWh__c.field-meta.xml
<CustomField>
    <fullName>February_kWh__c</fullName>
    <label>February kWh</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>