unpackaged/main/default/objects/Lead/fields/Financing_Tool__c.field-meta.xml
<CustomField>
    <fullName>Financing_Tool__c</fullName>
    <label>Financing Tool</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Operations Only</fullName>
            </value>
            <value>
                <fullName>Financed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>