unpackaged/main/default/objects/Lead/fields/Friend_s_City__c.field-meta.xml
<CustomField>
    <fullName>Friend_s_City__c</fullName>
    <label>Friend's City</label>
    <length>60</length>
    <type>Text</type>
</CustomField>