unpackaged/main/default/objects/Lead/fields/Friend_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Friend_s_Email__c</fullName>
    <label>Friend's Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>