unpackaged/main/default/objects/Lead/fields/Friend_s_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Friend_s_Last_Name__c</fullName>
    <label>Friend's Last Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>