unpackaged/main/default/objects/Lead/fields/Friend_s_Phone__c.field-meta.xml
<CustomField>
    <fullName>Friend_s_Phone__c</fullName>
    <label>Friend's Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>