unpackaged/main/default/objects/Lead/fields/Friend_s_State__c.field-meta.xml
<CustomField>
    <fullName>Friend_s_State__c</fullName>
    <label>Friend's State</label>
    <length>30</length>
    <type>Text</type>
</CustomField>