unpackaged/main/default/objects/Lead/fields/Friends_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Friends_First_Name__c</fullName>
    <label>Friend's First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>