unpackaged/main/default/objects/Lead/fields/HOA_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>HOA_Contact_Name__c</fullName>
    <label>HOA Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>