unpackaged/main/default/objects/Lead/fields/HOA_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>HOA_Email_Address__c</fullName>
    <label>HOA Email Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>