unpackaged/main/default/objects/Lead/fields/HOA_Name__c.field-meta.xml
<CustomField>
    <fullName>HOA_Name__c</fullName>
    <label>HOA Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>