unpackaged/main/default/objects/Lead/fields/HOA_Neighborhood_Subdivision_Name__c.field-meta.xml
<CustomField>
    <fullName>HOA_Neighborhood_Subdivision_Name__c</fullName>
    <label>HOA Neighborhood/Subdivision Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>