unpackaged/main/default/objects/Lead/fields/HOA_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>HOA_Phone_Number__c</fullName>
    <label>HOA Phone Number</label>
    <type>Phone</type>
</CustomField>