unpackaged/main/default/objects/Lead/fields/Home_Owners_Association__c.field-meta.xml
<CustomField>
    <fullName>Home_Owners_Association__c</fullName>
    <description>If there is a HOA, please fill out the HOA section below.</description>
    <inlineHelpText>If there is a HOA, please fill out the HOA section below.</inlineHelpText>
    <label>Home Owners Association</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>