unpackaged/main/default/objects/Lead/fields/How_are_you_connected_to_this_individual__c.field-meta.xml
<CustomField>
    <fullName>How_are_you_connected_to_this_individual__c</fullName>
    <label>How are you connected to this individual</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Family Member</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Business Associate</fullName>
            </value>
            <value>
                <fullName>Neighbour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>