unpackaged/main/default/objects/Lead/fields/How_did_you_hear_about_Palmetto__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_about_Palmetto__c</fullName>
    <label>How did you hear about Palmetto?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Finance Partner</fullName>
            </value>
            <value>
                <fullName>Sales Organization</fullName>
            </value>
            <value>
                <fullName>Personal Contact</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Internet Search</fullName>
            </value>
            <value>
                <fullName>Other Solar Provider Referral</fullName>
            </value>
            <value>
                <fullName>Contractor Referral</fullName>
            </value>
            <value>
                <fullName>Realtor Referral</fullName>
            </value>
            <value>
                <fullName>Home Builder</fullName>
            </value>
            <value>
                <fullName>Word of Mouth</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>