unpackaged/main/default/objects/Lead/fields/Implied_Email_Consent_Date__c.field-meta.xml
<CustomField>
    <fullName>Implied_Email_Consent_Date__c</fullName>
    <label>Implied Email Consent Date</label>
    <type>Date</type>
</CustomField>