unpackaged/main/default/objects/Lead/fields/Implied_Mobile_Consent_Date__c.field-meta.xml
<CustomField>
    <fullName>Implied_Mobile_Consent_Date__c</fullName>
    <label>Implied Mobile Consent Date</label>
    <type>Date</type>
</CustomField>