unpackaged/main/default/objects/Lead/fields/January_kWh__c.field-meta.xml
<CustomField>
    <fullName>January_kWh__c</fullName>
    <label>January kWh</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>