unpackaged/main/default/objects/Lead/fields/July_kWh__c.field-meta.xml
<CustomField>
    <fullName>July_kWh__c</fullName>
    <label>July kWh</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>