unpackaged/main/default/objects/Lead/fields/June_kWh__c.field-meta.xml
<CustomField>
    <fullName>June_kWh__c</fullName>
    <label>June kWh</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>