unpackaged/main/default/objects/Lead/fields/Lead_Conversion_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Lead_Conversion_Overdue__c</fullName>
    <formula>Lead_Conversion_Threshold__c + 1</formula>
    <label>Lead Conversion Overdue</label>
    <type>Date</type>
</CustomField>