unpackaged/main/default/objects/Lead/fields/Lead_Conversion_SLA__c.field-meta.xml
<CustomField>
    <fullName>Lead_Conversion_SLA__c</fullName>
    <formula>'test'</formula>
    <label>Lead Conversion SLA</label>
    <type>Text</type>
</CustomField>