unpackaged/main/default/objects/Lead/fields/Lead_Conversion_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Lead_Conversion_Threshold__c</fullName>
    <formula>CreatedDate + 3</formula>
    <label>Lead Conversion Threshold</label>
    <type>Date</type>
</CustomField>