unpackaged/main/default/objects/Lead/fields/Lead_Medium__c.field-meta.xml
<CustomField>
    <fullName>Lead_Medium__c</fullName>
    <label>Lead Medium</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Organic</fullName>
            </value>
            <value>
                <fullName>Organic Mobile</fullName>
            </value>
            <value>
                <fullName>Organic Search</fullName>
            </value>
            <value>
                <fullName>Organic Social</fullName>
            </value>
            <value>
                <fullName>Organic Video</fullName>
            </value>
            <value>
                <fullName>Paid Ad</fullName>
            </value>
            <value>
                <fullName>Paid Search</fullName>
            </value>
            <value>
                <fullName>Paid Social</fullName>
            </value>
            <value>
                <fullName>Paid Video</fullName>
            </value>
            <value>
                <fullName>Purchased Lead</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>