unpackaged/main/default/objects/Lead/fields/Lead_Method__c.field-meta.xml
<CustomField>
    <fullName>Lead_Method__c</fullName>
    <label>Lead Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Party Form</fullName>
            </value>
            <value>
                <fullName>3rd Party Form</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Inbound Phone Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>