unpackaged/main/default/objects/Lead/fields/Lead_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Type__c</fullName>
    <label>Lead Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Become a Sales Member</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
            </value>
            <value>
                <fullName>Give 1k Get 1k</fullName>
            </value>
            <value>
                <fullName>Independent</fullName>
            </value>
            <value>
                <fullName>Palmetto Protect</fullName>
            </value>
            <value>
                <fullName>Self-Generated</fullName>
            </value>
            <value>
                <fullName>Solar</fullName>
            </value>
            <value>
                <fullName>Solar Stimulus</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Thermostat</fullName>
            </value>
            <value>
                <fullName>Virtual Appointment</fullName>
            </value>
            <value>
                <fullName>1st Party</fullName>
            </value>
            <value>
                <fullName>3rd Party</fullName>
            </value>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Corporate Partner</fullName>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Home Builder</fullName>
            </value>
            <value>
                <fullName>Recruiter</fullName>
            </value>
            <value>
                <fullName>Powerup2020</fullName>
            </value>
            <value>
                <fullName>Solar Energy</fullName>
            </value>
            <value>
                <fullName>Request Service</fullName>
            </value>
            <value>
                <fullName>Clean Energy Experts</fullName>
                <isActive>false</isActive>
                <label>Clean Energy Experts</label>
            </value>
            <value>
                <fullName>Corporate</fullName>
                <isActive>false</isActive>
                <label>Corporate</label>
            </value>
            <value>
                <fullName>EnergyBillCruncher</fullName>
                <isActive>false</isActive>
                <label>EnergyBillCruncher</label>
            </value>
            <value>
                <fullName>Modernize</fullName>
                <isActive>false</isActive>
                <label>Modernize</label>
            </value>
            <value>
                <fullName>PX.com</fullName>
                <isActive>false</isActive>
                <label>PX.com</label>
            </value>
            <value>
                <fullName>RMC Solar</fullName>
                <isActive>false</isActive>
                <label>RMC Solar</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>