unpackaged/main/default/objects/Lead/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <label>Lead Type</label>
    <type>Text</type>
</CustomField>