unpackaged/main/default/objects/Lead/fields/Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type__c</fullName>
    <label>Loan Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dividend</fullName>
            </value>
            <value>
                <fullName>Mosiac</fullName>
            </value>
            <value>
                <fullName>Sunlight</fullName>
            </value>
            <value>
                <fullName>None (Cash)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>