unpackaged/main/default/objects/Lead/fields/Location_formula__c.field-meta.xml
<CustomField>
    <fullName>Location_formula__c</fullName>
    <formula>State</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location (formula)</label>
    <type>Text</type>
</CustomField>