unpackaged/main/default/objects/Lead/fields/Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Manager_Email__c</fullName>
    <label>Manager Email</label>
    <type>Email</type>
</CustomField>