unpackaged/main/default/objects/Lead/fields/March_kWh__c.field-meta.xml
<CustomField>
    <fullName>March_kWh__c</fullName>
    <label>March kWh</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>