unpackaged/main/default/objects/Lead/fields/match_type__c.field-meta.xml
<CustomField>
    <fullName>match_type__c</fullName>
    <label>match_type</label>
    <length>120</length>
    <type>Text</type>
</CustomField>