unpackaged/main/default/objects/Lead/fields/May_kWh__c.field-meta.xml
<CustomField>
    <fullName>May_kWh__c</fullName>
    <label>May kWh</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>