unpackaged/main/default/objects/Lead/fields/Monthly_Electric_Bill__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Electric_Bill__c</fullName>
    <label>Monthly Electric Bill</label>
    <length>150</length>
    <type>Text</type>
</CustomField>