unpackaged/main/default/objects/Lead/fields/network__c.field-meta.xml
<CustomField>
    <fullName>network__c</fullName>
    <label>network</label>
    <length>120</length>
    <type>Text</type>
</CustomField>