unpackaged/main/default/objects/Lead/fields/November_kWh__c.field-meta.xml
<CustomField>
    <fullName>November_kWh__c</fullName>
    <label>November kWh</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>